--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer class="footer">
     <div class="ml-25">
-        <span>Marvel API - Angular 11</span>
+        <span>Marvel API - Angular 11- projeto com bootstrap</span>
     </div>
     <div>
         <span>
