--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -1,19 +1,17 @@
-<footer class="footer">
-    <div class="ml-25">
-        <span>Marvel API - Angular 11- projeto com bootstrap</span>
-    </div>
-    <div>
-        <span>
-            <a href=""><i class="fa fa-linkedin"></i></a>
-        </span>
-        <span>
-            <a href=""><i class="fa fa-instagram"></i></a>
-        </span>
-
-    </div>
-    <div class="mr-25">
-        <span>
-            <i class="fa fa-copyright"></i> Jean
-        </span>
+<footer class="page-footer font-small bg-dark">
+    <div class="container d-flex justify-content-between">
+        <!-- Copyright -->
+        <div class="footer-copyright text-center py-3 text-white">
+           Angular app - Marvel
+        </div>
+        <div class="footer-copyright text-center py-3 text-white">
+            © {{year}} Copyright : Jean
+        </div>
+        <div class="footer-copyright text-center py-3 text-white">
+            <a href="https://www.linkedin.com/in/jean-dinelli-723068b6/" target="_blank">
+                LinkedIn
+            </a>
+            <i class="fa fa-linkedin"></i>
+        </div>
     </div>
 </footer>
