--- a/src/app/pages/characters/character-details/character-details.component.html
+++ b/src/app/pages/characters/character-details/character-details.component.html
@@ -1,4 +1,4 @@
-<app-bread-crumb [items]="[{text: 'Personagens / ', link: '/characters'}, {text: 'Detalhes do personagem'}]">
+<app-bread-crumb [items]="[{text: 'Personagens', link: '/characters'}, {text: 'Detalhes do personagem'}]">
 </app-bread-crumb>
 
 <div *ngIf="character" class="detail-size">
