--- a/src/app/pages/creators/creator-details/creator-details.component.html
+++ b/src/app/pages/creators/creator-details/creator-details.component.html
@@ -1,4 +1,4 @@
-<app-bread-crumb [items]="[{text: 'Criadores / ', link: '/creators'}, {text: 'Detalhes do criador'}]">
+<app-bread-crumb [items]="[{text: 'Criadores', link: '/creators'}, {text: 'Detalhes do criador'}]">
 </app-bread-crumb>
 
 <div *ngIf="creator" class="detail-size">
