--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,12 @@
+@import '~bootstrap/dist/css/bootstrap.min.css';
+
 body {
   margin: 0px !important;
   background-image: url("assets/images/cool-background.png");
 }
 
 .screen {
-  margin-top: 65px;
+  margin-top: 15px;
   width: 100%;
   margin-right: auto;
   margin-left: auto;
