ajuste nas listagem e detalhes

--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -1,13 +1,13 @@
-<footer class="page-footer font-small bg-dark">
+<footer class="page-footer footer font-small bg-dark">
     <div class="container d-flex justify-content-between">
         <!-- Copyright -->
-        <div class="footer-copyright text-center py-3 text-white">
+        <div class="footer-copyright text-center py-2 text-white">
            Angular app - Marvel
         </div>
-        <div class="footer-copyright text-center py-3 text-white">
+        <div class="footer-copyright text-center py-2 text-white">
             © {{year}} Copyright : Jean
         </div>
-        <div class="footer-copyright text-center py-3 text-white">
+        <div class="footer-copyright text-center py-2 text-white">
             <a href="https://www.linkedin.com/in/jean-dinelli-723068b6/" target="_blank">
                 LinkedIn
             </a>
