--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -5,7 +5,7 @@
            Angular app - Marvel
         </div>
         <div class="footer-copyright text-center py-2 text-white">
-            © {{year}} Copyright : Jean
+            © {{currentYear}} Copyright : Jean
         </div>
         <div class="footer-copyright text-center py-2 text-white">
             <a href="https://www.linkedin.com/in/jean-dinelli-723068b6/" target="_blank">
